@@ -108,9 +108,9 @@ int main(void){
 	document_header();
 
 	/* read the CGI configuration file */
-	result=read_cgi_config_file(DEFAULT_CGI_CONFIG_FILE);
+	result=read_cgi_config_file(get_cgi_config_location());
 	if(result==ERROR){
-		printf("<P>Error: Could not open CGI configuration file '%s' for reading!</P>\n",DEFAULT_CGI_CONFIG_FILE);
+		printf("<P>Error: Could not open CGI configuration file '%s' for reading!</P>\n",get_cgi_config_location());
 		document_footer();
 		return ERROR;
 	        }
@@ -132,7 +132,7 @@ int main(void){
                 }
 
 	/* read all status data */
-	result=read_all_status_data(DEFAULT_CGI_CONFIG_FILE,READ_ALL_STATUS_DATA);
+	result=read_all_status_data(get_cgi_config_location(),READ_ALL_STATUS_DATA);
 	if(result==ERROR){
 		printf("<P>Error: Could not read host and service status information!</P>\n");
 		document_footer();
